feat: integrate Sentry for enhanced error tracking and update application properties