@@ -3,13 +3,24 @@ package com.froilan.synectix.exception.global;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import org.hibernate.QueryTimeoutException;
+import org.springframework.dao.DataAccessResourceFailureException;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.dao.OptimisticLockingFailureException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.TransactionSystemException;
+import org.springframework.transaction.UnexpectedRollbackException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+import io.sentry.Sentry;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.persistence.PersistenceException;
+import jakarta.transaction.RollbackException;
+import jakarta.validation.ConstraintViolationException;
 
 import com.auth0.jwt.exceptions.JWTVerificationException;
 import com.froilan.synectix.exception.ApiError;
@@ -21,6 +32,27 @@ import com.froilan.synectix.exception.validation.NotFoundException;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+    @ExceptionHandler(DataAccessResourceFailureException.class)
+    public ResponseEntity<ApiError> handleDataAccessResourceFailure(DataAccessResourceFailureException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("DATA_ACCESS_FAILURE", "Database is unreachable.");
+        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(error);
+    }
+
+    @ExceptionHandler(QueryTimeoutException.class)
+    public ResponseEntity<ApiError> handleQueryTimeout(QueryTimeoutException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("QUERY_TIMEOUT", "Database query timed out.");
+        return ResponseEntity.status(HttpStatus.GATEWAY_TIMEOUT).body(error);
+    }
+
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<ApiError> handleIllegalState(IllegalStateException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("ILLEGAL_STATE", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+    }
+
     @ExceptionHandler(WrongPasswordException.class)
     public ResponseEntity<ApiError> handleWrongPassword(WrongPasswordException ex) {
         ApiError error = new ApiError("WRONG_PASSWORD", ex.getMessage());
@@ -60,16 +92,104 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<Object> handleValidationErrors(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult()
-            .getFieldErrors()
-            .stream()
-            .map(error -> error.getField() + ": " + error.getDefaultMessage())
-            .collect(Collectors.toList());
+                .getFieldErrors()
+                .stream()
+                .map(error -> error.getField() + ": " + error.getDefaultMessage())
+                .toList();
 
         Map<String, Object> body = new HashMap<>();
         body.put("status", HttpStatus.BAD_REQUEST.value());
         body.put("errorCode", "VALIDATION_ERROR");
         body.put("errors", errors);
         return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(OptimisticLockingFailureException.class)
+    public ResponseEntity<ApiError> handleOptimisticLockingFailure(OptimisticLockingFailureException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("OPTIMISTIC_LOCKING_FAILURE",
+                "The resource was modified by another transaction. Please retry.");
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+    }
+
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity<ApiError> handleEntityNotFound(EntityNotFoundException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("ENTITY_NOT_FOUND", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+    }
+
+    @ExceptionHandler(ConstraintViolationException.class)
+    public ResponseEntity<Object> handleConstraintViolation(ConstraintViolationException ex) {
+        List<String> errors = ex.getConstraintViolations()
+                .stream()
+                .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
+                .toList();
+
+        Map<String, Object> body = new HashMap<>();
+        body.put("status", HttpStatus.BAD_REQUEST.value());
+        body.put("errorCode", "CONSTRAINT_VIOLATION");
+        body.put("errors", errors);
+        return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<ApiError> handleDataIntegrityViolation(DataIntegrityViolationException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("DATA_INTEGRITY_VIOLATION", "Database constraint violated.");
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+    }
+
+    @ExceptionHandler(TransactionSystemException.class)
+    public ResponseEntity<Object> handleTransactionSystemException(TransactionSystemException ex) {
+        if (ex.getCause() instanceof ConstraintViolationException constraintViolationException) {
+            List<String> errors = constraintViolationException.getConstraintViolations()
+                    .stream()
+                    .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
+                    .toList();
+
+            Map<String, Object> body = new HashMap<>();
+            body.put("status", HttpStatus.BAD_REQUEST.value());
+            body.put("errorCode", "CONSTRAINT_VIOLATION");
+            body.put("errors", errors);
+            return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+        }
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("TRANSACTION_ERROR", "A transaction error occurred.");
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+    }
+
+    @ExceptionHandler(RollbackException.class)
+    public ResponseEntity<Object> handleRollbackException(RollbackException ex) {
+        if (ex.getCause() instanceof ConstraintViolationException constraintViolationException) {
+            List<String> errors = constraintViolationException.getConstraintViolations()
+                    .stream()
+                    .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
+                    .toList();
+
+            Map<String, Object> body = new HashMap<>();
+            body.put("status", HttpStatus.BAD_REQUEST.value());
+            body.put("errorCode", "CONSTRAINT_VIOLATION");
+            body.put("errors", errors);
+            return new ResponseEntity<>(body, HttpStatus.BAD_REQUEST);
+        }
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("ROLLBACK_ERROR", "A rollback error occurred.");
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+    }
+
+    @ExceptionHandler(UnexpectedRollbackException.class)
+    public ResponseEntity<ApiError> handleUnexpectedRollback(UnexpectedRollbackException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("UNEXPECTED_ROLLBACK", "An unexpected rollback occurred.");
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+    }
+
+    @ExceptionHandler(PersistenceException.class)
+    public ResponseEntity<ApiError> handlePersistenceException(PersistenceException ex) {
+        Sentry.captureException(ex);
+        ApiError error = new ApiError("PERSISTENCE_ERROR", "A database error occurred.");
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
     }
 
     @ExceptionHandler(Exception.class)
